<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar_with_shadow_mid_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:scrollbarStyle="outsideOverlay"
       >

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_height="match_parent"
            card_view:cardElevation="4dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            card_view:cardMaxElevation="6dp"
            android:elevation="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView

                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="15dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/new_wagonfly_logo"/>

            <com.com.kartify_fonts.LightTextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="REGISTRATION"
                android:textColor="#000"
                android:visibility="gone"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.com.kartify_fonts.LightTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/signup_text"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="normal" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="25dp"
                app:theme="@style/EditTextHintForPrime">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:paddingLeft="10dp"
                    android:paddingRight="40dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                app:theme="@style/EditTextHintForPrime">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/hint_mobile"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingLeft="10dp"
                    android:paddingRight="40dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                app:theme="@style/EditTextHintForPrime">

                <EditText
                    android:id="@+id/input_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hint_otp"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingLeft="10dp"
                    android:paddingRight="40dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">
          <CheckBox
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:clickable="false"
              android:checked="true"/>
         <com.com.kartify_fonts.LightTextView
             android:id="@+id/term_and_cond"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textSize="12sp"
             android:textColor="@color/black"
             android:text="@string/signuppage_text"/>

     </LinearLayout>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="40dp"
android:layout_marginBottom="20dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_sign_up"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="visible" />


        </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>