
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/back"
        android:orientation="vertical">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:elevation="12dp"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:paddingLeft="20dp"
                android:paddingRight="20dp">


                <com.com.kartify_fonts.LightTextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="REGISTRATION"
                    android:textColor="#000"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <com.com.kartify_fonts.LightTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/signup_text"
                    android:textColor="@color/dark_gray_color"
                    android:textSize="34sp"
                    android:textStyle="normal" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="16dp"
                    app:theme="@style/EditTextHintForPrime">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:paddingLeft="10dp"
                        android:paddingRight="40dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="26sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    app:theme="@style/EditTextHintForPrime">

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/hint_mobile"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingLeft="10dp"
                        android:paddingRight="40dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="26sp" />
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"

                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:clickable="false"
                        android:visibility="gone" />

                    <com.com.kartify_fonts.LightTextView
                        android:id="@+id/term_and_cond"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="*Don't worry we won't use it"
                        android:textColor="@color/black"
                        android:textSize="26sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@color/colorPrimaryDark"
                    android:padding="25dp"
                    android:text="Make payment"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="visible" />
            </LinearLayout>


        </LinearLayout>



    </RelativeLayout>
